# hf-ml-platform.auth

./: .gitignore  README.md  openapi.yaml  pom.xml
.github/workflows/: ci.yml  deploy.yml  destroy.yml
infra/: app.py  clean.sh  pyproject.toml  requirements-dev.txt  ruff.toml  tox.ini
infra/src/: ecr_stack.py  ecs_stack.py
infra/tests/: test_ecr_stack.py  test_ecs_stack.py
src/main/java/com/hfmlplatform/auth/: AuthApplication.java
src/main/java/com/hfmlplatform/auth/config/: AppConfig.java  JwtAuthFilter.java  SecurityConfig.java
src/main/java/com/hfmlplatform/auth/controller/: ApiKeyController.java  AuthController.java  HealthController.java  LogoutController.java  PublicKeyController.java  RefreshController.java  ServiceAuthController.java
src/main/java/com/hfmlplatform/auth/dto/: LoginResult.java
src/main/java/com/hfmlplatform/auth/model/: ApiKey.java  RefreshToken.java  ServiceClient.java  Session.java  Tier.java  User.java
src/main/java/com/hfmlplatform/auth/repository/: ApiKeyRepository.java  RefreshTokenRepository.java  ServiceClientRepository.java  SessionRepository.java  TierRepository.java  UserRepository.java
src/main/java/com/hfmlplatform/auth/scheduler/: SessionCleanupScheduler.java
src/main/java/com/hfmlplatform/auth/service/: ApiKeyService.java  AuthService.java  LogoutService.java  RefreshService.java  ServiceAuthService.java  TokenService.java
src/main/resources/: application-local.yml  application-production.yml  application.yml
src/test/java/com/hfmlplatform/auth/service/: ApiKeyServiceTest.java  AuthServiceTest.java  (+4 more)
